--- a/homepage.css
+++ b/homepage.css
@@ -17,6 +17,7 @@ body{
 
 p{
     margin: 0;
+    padding: 0e;
 }
 .mainTitle{
     background-color: rgb(0, 0, 0);
@@ -25,6 +26,7 @@ p{
     text-align: center;
     font-size: 100px;
     width: 100%;
+    height: 12%;
 }
 
 .flex-container{
