--- a/index.css
+++ b/index.css
@@ -173,10 +173,11 @@ body{
 }
 
 .button{
+    text-align: center;
     z-index: 4;
     background-color: aliceblue;
     
-    width: 170px;
+    width: 180px;
     height: 70px;
    
     font-family: American Typewriter, serif;
@@ -216,6 +217,7 @@ body{
 .mainTitle{
 
     font-family: American Typewriter, serif;
+    text-align: center;
 
     position: absolute;
     top: 30%;
@@ -236,6 +238,7 @@ body{
     animation-delay: 0s, 6s;
     animation-duration: 4s ,20s;
     animation-iteration-count: 1, infinite;
+    text-align: center;
 
     position: absolute;
     top: 38%;
