--- a/homepage.css
+++ b/homepage.css
@@ -55,6 +55,10 @@ p{
     border: 4px dashed black;
     width: 80%;
     background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
 }
 .box2{
     height: 100%;
@@ -129,6 +133,33 @@ p{
     height: 88%;
     margin: 0px 10px;
     border: 4px solid black;
+    border-top: 0;
+}
+
+.options-container ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.options-container{
+    display: flex;
+    justify-content: flex-start;
+    background-color: red;
+    width: 100%;
+}
+.options{
+    background-color: blue;
+    width: 100%;
+}
+.options li{
+    background-color: rgb(235, 235, 235);
+    border: 5px solid black;
+    width: 100%;
+}
+.options li:first-child{
+    border-bottom: 0;
+}
+.options li:last-child{
     border-top: 0;
 }
 
